binaryen/src/Bindings/Binaryen/Raw.hs


foreign import ccall unsafe "BinaryenLeSInt32" c_BinaryenLeSInt32 :: BinaryenOp

foreign import ccall unsafe "BinaryenLeUInt32" c_BinaryenLeUInt32 :: BinaryenOp

foreign import ccall unsafe "BinaryenGtSInt32" c_BinaryenGtSInt32 :: BinaryenOp

foreign import ccall unsafe "BinaryenGtUInt32" c_BinaryenGtUInt32 :: BinaryenOp

foreign import ccall unsafe "BinaryenGeSInt32" c_BinaryenGeSInt32 :: BinaryenOp

foreign import ccall unsafe "BinaryenGeUInt32" c_BinaryenGeUInt32 :: BinaryenOp

foreign import ccall unsafe "BinaryenAddInt64" c_BinaryenAddInt64 :: BinaryenOp

foreign import ccall unsafe "BinaryenSubInt64" c_BinaryenSubInt64 :: BinaryenOp

foreign import ccall unsafe "BinaryenMulInt64" c_BinaryenMulInt64 :: BinaryenOp

foreign import ccall unsafe "BinaryenDivSInt64" c_BinaryenDivSInt64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenDivUInt64" c_BinaryenDivUInt64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenRemSInt64" c_BinaryenRemSInt64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenRemUInt64" c_BinaryenRemUInt64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenAndInt64" c_BinaryenAndInt64 :: BinaryenOp

foreign import ccall unsafe "BinaryenOrInt64" c_BinaryenOrInt64 :: BinaryenOp

foreign import ccall unsafe "BinaryenXorInt64" c_BinaryenXorInt64 :: BinaryenOp

foreign import ccall unsafe "BinaryenShlInt64" c_BinaryenShlInt64 :: BinaryenOp

foreign import ccall unsafe "BinaryenShrUInt64" c_BinaryenShrUInt64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenShrSInt64" c_BinaryenShrSInt64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenRotLInt64" c_BinaryenRotLInt64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenRotRInt64" c_BinaryenRotRInt64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenEqInt64" c_BinaryenEqInt64 :: BinaryenOp

foreign import ccall unsafe "BinaryenNeInt64" c_BinaryenNeInt64 :: BinaryenOp

foreign import ccall unsafe "BinaryenLtSInt64" c_BinaryenLtSInt64 :: BinaryenOp

foreign import ccall unsafe "BinaryenLtUInt64" c_BinaryenLtUInt64 :: BinaryenOp

foreign import ccall unsafe "BinaryenLeSInt64" c_BinaryenLeSInt64 :: BinaryenOp

foreign import ccall unsafe "BinaryenLeUInt64" c_BinaryenLeUInt64 :: BinaryenOp

foreign import ccall unsafe "BinaryenGtSInt64" c_BinaryenGtSInt64 :: BinaryenOp

foreign import ccall unsafe "BinaryenGtUInt64" c_BinaryenGtUInt64 :: BinaryenOp

foreign import ccall unsafe "BinaryenGeSInt64" c_BinaryenGeSInt64 :: BinaryenOp

foreign import ccall unsafe "BinaryenGeUInt64" c_BinaryenGeUInt64 :: BinaryenOp

foreign import ccall unsafe "BinaryenAddFloat32" c_BinaryenAddFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenSubFloat32" c_BinaryenSubFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenMulFloat32" c_BinaryenMulFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenDivFloat32" c_BinaryenDivFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenCopySignFloat32" c_BinaryenCopySignFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenMinFloat32" c_BinaryenMinFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenMaxFloat32" c_BinaryenMaxFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenEqFloat32" c_BinaryenEqFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenNeFloat32" c_BinaryenNeFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenLtFloat32" c_BinaryenLtFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenLeFloat32" c_BinaryenLeFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenGtFloat32" c_BinaryenGtFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenGeFloat32" c_BinaryenGeFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenAddFloat64" c_BinaryenAddFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenSubFloat64" c_BinaryenSubFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenMulFloat64" c_BinaryenMulFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenDivFloat64" c_BinaryenDivFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenCopySignFloat64" c_BinaryenCopySignFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenMinFloat64" c_BinaryenMinFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenMaxFloat64" c_BinaryenMaxFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenEqFloat64" c_BinaryenEqFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenNeFloat64" c_BinaryenNeFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenLtFloat64" c_BinaryenLtFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenLeFloat64" c_BinaryenLeFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenGtFloat64" c_BinaryenGtFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenGeFloat64" c_BinaryenGeFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenCurrentMemory" c_BinaryenCurrentMemory
  :: BinaryenOp

foreign import ccall unsafe "BinaryenGrowMemory" c_BinaryenGrowMemory
  :: BinaryenOp

foreign import ccall unsafe "BinaryenAtomicRMWAdd" c_BinaryenAtomicRMWAdd
  :: BinaryenOp

foreign import ccall unsafe "BinaryenAtomicRMWSub" c_BinaryenAtomicRMWSub
  :: BinaryenOp

foreign import ccall unsafe "BinaryenAtomicRMWAnd" c_BinaryenAtomicRMWAnd
  :: BinaryenOp

foreign import ccall unsafe "BinaryenAtomicRMWOr" c_BinaryenAtomicRMWOr
  :: BinaryenOp

foreign import ccall unsafe "BinaryenAtomicRMWXor" c_BinaryenAtomicRMWXor
  :: BinaryenOp

foreign import ccall unsafe "BinaryenAtomicRMWXchg" c_BinaryenAtomicRMWXchg
  :: BinaryenOp

foreign import ccall unsafe "BinaryenTruncSatSFloat32ToInt32" c_BinaryenTruncSatSFloat32ToInt32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenTruncSatSFloat32ToInt64" c_BinaryenTruncSatSFloat32ToInt64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenTruncSatUFloat32ToInt32" c_BinaryenTruncSatUFloat32ToInt32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenTruncSatUFloat32ToInt64" c_BinaryenTruncSatUFloat32ToInt64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenTruncSatSFloat64ToInt32" c_BinaryenTruncSatSFloat64ToInt32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenTruncSatSFloat64ToInt64" c_BinaryenTruncSatSFloat64ToInt64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenTruncSatUFloat64ToInt32" c_BinaryenTruncSatUFloat64ToInt32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenTruncSatUFloat64ToInt64" c_BinaryenTruncSatUFloat64ToInt64
  :: BinaryenOp

data BinaryenExpression

type BinaryenExpressionRef = Ptr BinaryenExpression

foreign import ccall unsafe "BinaryenBlock" c_BinaryenBlock
  :: BinaryenModuleRef ->
  Ptr CChar ->
    Ptr BinaryenExpressionRef ->
      BinaryenIndex -> BinaryenType -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenIf" c_BinaryenIf
  :: BinaryenModuleRef ->
  BinaryenExpressionRef ->
    BinaryenExpressionRef ->
      BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenLoop" c_BinaryenLoop
  :: BinaryenModuleRef ->
  Ptr CChar -> BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenBreak" c_BinaryenBreak
  :: BinaryenModuleRef ->
  Ptr CChar ->
    BinaryenExpressionRef ->
      BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenSwitch" c_BinaryenSwitch
  :: BinaryenModuleRef ->
  Ptr (Ptr CChar) ->
    BinaryenIndex ->
      Ptr CChar ->
        BinaryenExpressionRef ->
          BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenCall" c_BinaryenCall
  :: BinaryenModuleRef ->
  Ptr CChar ->
    Ptr BinaryenExpressionRef ->
      BinaryenIndex -> BinaryenType -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenCallIndirect" c_BinaryenCallIndirect
  :: BinaryenModuleRef ->
  BinaryenExpressionRef ->
    Ptr BinaryenExpressionRef ->
      BinaryenIndex -> Ptr CChar -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenGetLocal" c_BinaryenGetLocal
  :: BinaryenModuleRef ->
  BinaryenIndex -> BinaryenType -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenSetLocal" c_BinaryenSetLocal
  :: BinaryenModuleRef ->
  BinaryenIndex -> BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenTeeLocal" c_BinaryenTeeLocal
  :: BinaryenModuleRef ->
  BinaryenIndex -> BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenGetGlobal" c_BinaryenGetGlobal
  :: BinaryenModuleRef ->
  Ptr CChar -> BinaryenType -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenSetGlobal" c_BinaryenSetGlobal
  :: BinaryenModuleRef ->
  Ptr CChar -> BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenLoad" c_BinaryenLoad
  :: BinaryenModuleRef ->
  Word32 ->
    Int8 ->
      Word32 ->
        Word32 ->
          BinaryenType -> BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenStore" c_BinaryenStore
  :: BinaryenModuleRef ->
  Word32 ->
    Word32 ->
      Word32 ->
        BinaryenExpressionRef ->
          BinaryenExpressionRef -> BinaryenType -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenUnary" c_BinaryenUnary
  :: BinaryenModuleRef ->
  BinaryenOp -> BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenBinary" c_BinaryenBinary
  :: BinaryenModuleRef ->
  BinaryenOp ->
    BinaryenExpressionRef ->
      BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenSelect" c_BinaryenSelect
  :: BinaryenModuleRef ->
  BinaryenExpressionRef ->
    BinaryenExpressionRef ->
      BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenDrop" c_BinaryenDrop
  :: BinaryenModuleRef ->
  BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenReturn" c_BinaryenReturn
  :: BinaryenModuleRef ->
  BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenHost" c_BinaryenHost
  :: BinaryenModuleRef ->
  BinaryenOp ->
    Ptr CChar ->
      Ptr BinaryenExpressionRef ->
        BinaryenIndex -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenNop" c_BinaryenNop
  :: BinaryenModuleRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenUnreachable" c_BinaryenUnreachable
  :: BinaryenModuleRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenAtomicLoad" c_BinaryenAtomicLoad
  :: BinaryenModuleRef ->
  Word32 ->
    Word32 ->
      BinaryenType -> BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenAtomicStore" c_BinaryenAtomicStore
  :: BinaryenModuleRef ->
  Word32 ->
    Word32 ->
      BinaryenExpressionRef ->
        BinaryenExpressionRef -> BinaryenType -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenAtomicRMW" c_BinaryenAtomicRMW
  :: BinaryenModuleRef ->
  BinaryenOp ->
    BinaryenIndex ->
      BinaryenIndex ->
        BinaryenExpressionRef ->
          BinaryenExpressionRef -> BinaryenType -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenAtomicCmpxchg" c_BinaryenAtomicCmpxchg
  :: BinaryenModuleRef ->
  BinaryenIndex ->
    BinaryenIndex ->
      BinaryenExpressionRef ->
        BinaryenExpressionRef ->
          BinaryenExpressionRef -> BinaryenType -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenAtomicWait" c_BinaryenAtomicWait
  :: BinaryenModuleRef ->
  BinaryenExpressionRef ->
    BinaryenExpressionRef ->
      BinaryenExpressionRef -> BinaryenType -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenAtomicWake" c_BinaryenAtomicWake
  :: BinaryenModuleRef ->
  BinaryenExpressionRef ->
    BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenExpressionGetId" c_BinaryenExpressionGetId
  :: BinaryenExpressionRef -> IO BinaryenExpressionId
